--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "jugglingdb": ">= 0.2.0",
-    "mysql": ">= 2.0.0-alpha3"
+    "mysql": ">= 2.0.0-alpha3",
+    "underscore": ""
   },
   "devDependencies": {
     "coffee-script": "latest",
