--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "make test"
   },
   "dependencies": {
-    "jugglingdb": ">= 0.2.0",
+    "jugglingdb": ">= 0.2.x",
     "mysql": ">= 2.0.0-alpha3"
   },
   "devDependencies": {
